--- a/bviz.html
+++ b/bviz.html
@@ -120,10 +120,10 @@ The organization's administrative office is located in South Williamsport, Penns
   <button type="button" class="btn btn-default js-show-block">Block</button>
   <button type="button" class="btn btn-default js-show-3d">3D</button>
 </div>
+<br>
 
-
-		<button class="btn js-show-blobs">blobs</button>
-		<button class="btn js-show-timeline">timeline</button>
+		<button class="btn js-show-pitching-bar">Pitching chart</button>
+		<button class="btn js-show-hitting-bar">Hitting chart</button>
 	</form>
 </template>	
 
