--- a/bviz.html
+++ b/bviz.html
@@ -122,18 +122,21 @@ The organization's administrative office is located in South Williamsport, Penns
 </div>
 <br>
 <br>
-<p> Existing Data (fixed, does not matter what is on dropdown)</p>
+<p> Existing Data AAA Cardinal data(fixed categories, does not matter what is on dropdown)</p>
 		<button class="btn js-show-hitting-bar">Hitting chart</button>
 	</form>
 </template>	
 
 
 <template name="song_feature_list">
-	<ul>
+<p> All data is from GC.com. Both sets of graphs are not official.</p>
+	<!--
+<ul>
 	{{#each get_all_feature_values}}
 		<li>{{artist}} - {{title}}: {{value}}</li>
 	{{/each}}
 	</ul>
+-->
 </template>
 
 <template name="song_vizjs">
